src/objects/blng__PaymentAllocationDebitNoteLine__c.object
<CustomObject>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinanceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Payment Allocation Debit Note Lines</relationshipLabel>
        <relationshipName>FinanceBookPaymentAllocationDebitLine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinancePeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>Payment Allocation Debit Note Lines</relationshipLabel>
        <relationshipName>FinancePeriodPaymentAllocationDebitLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__DebitNoteAllocationId__c</fullName>
        <externalId>true</externalId>
        <label>DebitNoteAllocationId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__DebitNoteLine__c</fullName>
        <label>Debit Note Line</label>
        <referenceTo>blng__DebitNoteLine__c</referenceTo>
        <relationshipLabel>Payment Allocations (Debit Note Line)</relationshipLabel>
        <relationshipName>PaymentAllocationsDebitNoteLine</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__ImpactAmount__c</fullName>
        <formula>-  blng__Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>blng__InvoiceLine__c</referenceTo>
        <relationshipLabel>Payment Allocations (Debit Note Line)</relationshipLabel>
        <relationshipName>PaymentAllocationsDebitNoteLine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Payment Allocations (Debit Note Line)</relationshipLabel>
        <relationshipName>Payment_Allocations_Debit_Note_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>blng__Payment__c</referenceTo>
        <relationshipLabel>Payment Allocations (Debit Note Line)</relationshipLabel>
        <relationshipName>PaymentAllocationsDebitNoteLine</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__TypeAllocationUnallocation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Unallocated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unallocated?</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Allocation (Debit Note Line)</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Allocations (Debit Note Line)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>